src/render/graphicshelpers/graphicscontext.cpp
@@ -1161,10 +1161,11 @@ void GraphicsContext::setRenderer(Renderer *renderer)
 
 // It will be easier if the QGraphicContext applies the QUniformPack
 // than the other way around
-void GraphicsContext::setParameters(ShaderParameterPack &parameterPack)
+bool GraphicsContext::setParameters(ShaderParameterPack &parameterPack)
 {
     // Activate textures and update TextureUniform in the pack
     // with the correct textureUnit
+    bool allValid = true;
 
     // Set the pinned texture of the previous material texture
     // to pinable so that we should easily find an available texture unit
@@ -1184,6 +1185,10 @@ void GraphicsContext::setParameters(ShaderParameterPack &parameterPack)
                 Q_ASSERT(texUniform.valueType() == UniformValue::TextureValue);
                 const int texUnit = activateTexture(TextureScopeMaterial, t);
                 texUniform.data<UniformValue::Texture>()->textureId = texUnit;
+                // if the texture data from generators may not be available yet,
+                // make sure that the next frame is rendered
+                if (texUnit == -1)
+                    allValid = false;
             }
         }
     }
@@ -1238,6 +1243,8 @@ void GraphicsContext::setParameters(ShaderParameterPack &parameterPack)
 
         applyUniform(uniform, v);
     }
+    // if not all data is valid, the next frame will be rendered immediately
+    return allValid;
 }
 
 void GraphicsContext::enableAttribute(const VAOVertexAttribute &attr)
